--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,13 +14,15 @@
         android:theme="@style/Theme.WealthWise"
         tools:targetApi="31" >
         <activity
-            android:name=".MainActivity"
+            android:name=".activities.DashboardActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
+<!--        <activity android:name=".activities.DashboardActivity"/>-->
+        <activity android:name=".activities.ExpenseEntryActivity"/>
     </application>
 
 </manifest>
