Added Expense List
- Added Expense List
- Added Delete Feature
- Made live data on graphs

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,7 @@
         </activity>
 <!--        <activity android:name=".activities.DashboardActivity"/>-->
         <activity android:name=".activities.ExpenseEntryActivity"/>
+        <activity android:name=".activities.ExpenseListActivity"/>
     </application>
 
 </manifest>
